blog not working correct on mobile

--- a/assets/codeless/24.less
+++ b/assets/codeless/24.less
@@ -15,20 +15,24 @@
         display: inline-block;
         width: 100%;
         margin-top: 30px;
-        padding-bottom: 75px;
+        padding: 5px 0 5px 0;
+        overflow: hidden;
+        height: 95%;
         
         h1 { margin: 10px; font-size: 3.25em; }
         a {
             color: @turkis;
             
             > button {
-                margin: 0;
-                width: 80%;
-                height: 35px;
+                width: 60% !important;
+                margin: 30px 0 15px 0;
+                height: 40px;
+                position: relative;
+                left: 20%;
             }
         }
         .blog-page.filter-wrapper.left-row {
-            margin: 0 0 0 35px;
+            margin: 10px 0 0 35px;
             padding: 10px 10px 10px 20px;
             
             #blog-kategorie {
@@ -63,6 +67,9 @@
         .blog-page.middle-row {
             margin: 0 35px 0 0;
             padding: 10px 10px 10px 20px;
+            height: 100%;
+            overflow-y: scroll;
+            overflow-x: hidden;
         }
         .blog-page {
             a:last-of-type {
@@ -252,8 +259,10 @@
     #main-content #blog-page-wrapper {
         display: inline-block;
         width: 100%;
-        margin-top: 75px;
-        padding-bottom: 75px;
+        margin-top: 30px;
+        padding: 5px 0 5px 0;
+        // overflow: hidden;
+        height: 95%;
         
         h1 { margin: 0 0 10px 0; }
         a {
@@ -266,6 +275,11 @@
                 height: 35px;
             }
         }
+        
+        // .col-xs-12:first-of-type {
+        //     overflow: auto !important;
+        // }
+        
         .blog-page.filter-wrapper.left-row {
             margin: 0;
             padding: 10px 10px 10px 20px;
@@ -307,7 +321,9 @@
             a:last-of-type {
                 width: 100%;
                 height: 35px;
+                
                 button { width: 100%; }
+                
             }
             .blog-item.col-xs-12 {
                 margin: 15px 0 25px;
