--- a/assets/codeless/26.less
+++ b/assets/codeless/26.less
@@ -16,12 +16,13 @@ body {
 	height: 100%;
 	vertical-align: baseline;
     vertical-align: -webkit-baseline-middle;
-    overflow-y: hidden;
+    overflow: hidden;
     
-	&.scroll-y {
-	    overflow-y: auto;
-	}
+    &.no-scroll {
+        overflow: hidden;
+    }
 }
+
 *, *:before, *:after {
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -29,8 +30,9 @@ body {
 }
 
 header {
-	position: relative;
+	position: fixed;
 	min-width: 100%;
+	top: 0 !important;
 	z-index: 20;
 }
 
@@ -264,7 +266,7 @@ span.wirklich {
 #main-header {
 	position: relative;
 	width: 100%;
-	height: auto;
+	height: 50px;
 	background-color: @turkis;
 	top: 0;
 	z-index: 999;
@@ -451,6 +453,7 @@ span.wirklich {
     position: absolute;
     z-index: 2;
     opacity:0;
+    bottom: -1000px;
     .border-radius(6px);
     .translate(0,-100%);
     .transition(all 300ms ease);
@@ -3257,33 +3260,54 @@ div#main-content {
     position: relative;
     padding: 0;
     margin: 0 auto;
+    top: 50px;
+    
+    #search-page {
+        height: 97%;
+        position: relative;
+        top: 25px;
+        margin: 0;
+        
+        #mein-profil {
+            height: 100%;
+            
+            .shadow-box-center {
+                height: 99%;
+                
+                .meinprofil-container {
+                    overflow: hidden;
+                    overflow-y: scroll;
+                    height: 100%;
+                }
+            }
+        }
+        
+        
+        #search-hits {
+            overflow-x: hidden;
+            height: 99%;
+            float: left;
+            top: 0;
+            overflow: hidden;
+            overflow-y: visible;
+        }
+        
+        div#search-map-chat {
+            float: left;
+        }
+        
+        div#search-filter {
+            float: left;
+        }
+    }
+    
 }
-#main-content #search-page {
-    height: 98%;
-    position: relative;
-    top: 2%;
-    margin: 0;
+.endless_scroll_inner_wrap, .endless_scroll_content{
+    height: auto !important;
 }
-div#search-hits {
-    overflow-x: hidden;
-    height: 99%;
-    float: left;
-    top: 0 !important;
-    overflow: hidden;
-    overflow-y: visible;
-}
-
-div#search-map-chat {
-    float: left;
-}
-
-div#search-filter {
-    float: left;
-}
-
 footer {
-    position: absolute;
-    height: auto;
+    position: fixed;
+    max-height: 67px;
     width: 100%;
     bottom: 0;
     background: #646464;
@@ -3291,8 +3315,6 @@ footer {
     z-index: 3;
     box-shadow: 0 -2px 15px 0 #646464;
 }
-.endless_scroll_inner_wrap, .endless_scroll_content{
-    height: auto !important;
-}
+
 
 /* */
